$Id$

2020-05-24  Christian Franke  <franke@computer.org>

	drivedb.h: Add separate entries for WDC SMR drives (#1313).
	- Western Digital Blue (SMR)
	- Western Digital Black (SMR)
	- Western Digital Red: Move WD60EFAX to ...
	- Western Digital Red (SMR): ... here, add 2TB, 3TB, 4TB
	- Western Digital Blue Mobile: Move  WD[12]0SPZX to ...
	- Western Digital Blue Mobile (SMR): ... here

2020-04-23  Christian Franke  <franke@computer.org>

	drivedb.h: USB: Realtek RTL9210 (0x0bda:0x9210)

	scsinvme.cpp: Add '-d sntrealtek' device type for Realtek RTL9210
	USB to NVMe bridges (#1315).
	dev_interface.cpp: Update help text.
	smartctl.8.in, smartd.conf.5.in: Document new option.

	Thanks to Plugable Support for providing a NVMe enclosure.

2020-04-05  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron MX500 SSDs: Detect also older firmware (#1311)
	- Silicon Motion based SSDs: Add attributes 159 and 231 (#1304)
	- Seagate BarraCuda 3.5: Rename, merge entries,
	  add ST2000DM008 (#1179, #1252, #1286), ST10000DM0004
	- Seagate Exos X14: ST12000NM0538 (#1256)
	- Seagate Exos X16 (#1291, #1301)
	- Seagate Skyhawk (#1039)

2020-04-04  Christian Franke  <franke@computer.org>

	dev_jmb39x_raid.cpp: Add '-d jms56x,...' device type for protocol
	variant used by JMS562 USB to SATA RAID bridges (#1314).
	dev_interface.cpp: Parse '-d jms56x*[+TYPE]' option, update help text.
	smartctl.8.in, smartd.conf.5.in: Document new option.

2020-03-29  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Western Digital Ultrastar He10/12: Rename, add He12
	  (#1308, GH issues/51)
	- Western Digital Ultrastar DC HC530 (#1257)
	- Western Digital Green: WD5000AZRX (#1072)
	- Western Digital Red: WD120EMFZ (GH issues/49)
	- Western Digital Purple: WD*PURZ, WD80PUZX (#1057)
	- Western Digital Gold: WD6003FRYZ
	- Western Digital Blue Mobile: Rename, re-add WD10JPVX
	  (removed in r4991)
	- Western Digital Elements / My Passport (USB, AF):
	  WD10SMZW (#1088), WD50NDZW
